--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,6 +137,7 @@ export(isactive)
 export(newcore)
 export(reset)
 export(run)
+export(runscenario)
 export(sendmessage)
 export(setvar)
 export(shutdown)
