Clean up n2o_component
Clean up `n2o_component.cpp` and related data structures, which had confusing notation, unused variables, and incorrect internal units (although its outputs were correct).

--- a/input/api-example.ini
+++ b/input/api-example.ini
@@ -123,8 +123,9 @@ Ma = csv:concentrations/RCP45_ch4n2o_conc.csv
 ;tau = 10				; lifetime in years  oucher et al 2009
 
 [nitrous]
-N0= 273.0				; preindustrial nitrous oxide, ppbv
-;UC_N2O=4.8				; Tg(N2O)/ppb unit conversion between emissions and concentrations
+N0=273.0				; preindustrial nitrous oxide, ppbv
+UC_N2O=4.8				; TgN/ppbv unit conversion between emissions and concentrations
+TN2O0=132         		; initial lifetime of N2O, years
 
 Na = csv:concentrations/RCP45_ch4n2o_conc.csv
 ;N2O_emissions=csv:emissions/RCP45_emissions.csv   ; concentration time series
