--- a/input/hector_rcp45.ini
+++ b/input/hector_rcp45.ini
@@ -131,14 +131,14 @@ NMVOC_emissions=csv:emissions/RCP45_emissions.csv ; emissions time series
 ;------------------------------------------------------------------------
 [N2O]
 N0=272.9596		; preindustrial nitrous oxide, ppbv
-UC_N2O=4.8			; Tg(N2O)/ppb unit conversion between emissions and concentrations
-TN2O0=132           ; Initial Lifetime of N2O
+UC_N2O=4.8		; TgN/ppbv unit conversion between emissions and concentrations
+TN2O0=132       ; initial lifetime of N2O, years
 
 ; An example of setting a time series by individual values
 ; The model will interpolate as necessary between them
-N2ON_emissions[1765]=11  ; natural emissions in 1765 
-N2ON_emissions[2000]=8   ; natural emissions in 2000 
-N2ON_emissions[2300]=8   ; natural emissions in 2300 
+N2O_natural_emissions[1765]=11  ; natural emissions in 1765, TgN
+N2O_natural_emissions[2000]=8   ; natural emissions in 2000, TgN
+N2O_natural_emissions[2300]=8   ; natural emissions in 2300, TgN
 
 N2O_emissions=csv:emissions/RCP45_emissions.csv   ; emissions time series
 ;molarMass=44.01     ; grams
