--- a/input/hector-gcam.ini
+++ b/input/hector-gcam.ini
@@ -119,13 +119,13 @@ NMVOC_emissions=csv:../input/climate/gcam_emissions.csv   ; emissions time serie
 
 [N2O]
 enabled=1
-N0= 272.9596			; preindustrial nitrous oxide, ppbv
-UC_N2O=4.8				; Tg(N2O)/ppb unit conversion between emissions and concentrations
-TN2O0 = 132             ; Initial Lifetime of N2O
+N0=272.9596			; preindustrial nitrous oxide, ppbv
+UC_N2O=4.8			; TgN/ppbv unit conversion between emissions and concentrations
+TN2O0=132       	; initial lifetime of N2O, years
 
-N2ON_emissions[1765] = 11  ; Natural Emissions in 1765 
-N2ON_emissions[2000] = 8   ; Natural Emissions in 2000 
-N2ON_emissions[2300] = 8   ; Natural Emissions in 2300 
+N2O_natural_emissions[1765] = 11  ; natural emissions in 1765, TgN 
+N2O_natural_emissions[2000] = 8   ; natural emissions in 2000, TgN
+N2O_natural_emissions[2300] = 8   ; natural emissions in 2300, TgN 
 
 N2O_emissions=csv:../input/climate/gcam_emissions.csv   ; emissions time series
 
