Mistakenly deleted two lines in the 2.6 file

--- a/input/hector_rcp26.ini
+++ b/input/hector_rcp26.ini
@@ -131,6 +131,8 @@ NMVOC_emissions=csv:emissions/RCP26_emissions.csv ; emissions time series
 ;------------------------------------------------------------------------
 [N2O]
 N0=272.9596		; preindustrial nitrous oxide, ppbv
+UC_N2O=4.8		; TgN/ppbv unit conversion between emissions and concentrations
+TN2O0=132       ; initial lifetime of N2O, years
 
 ; An example of setting a time series by individual values
 ; The model will interpolate as necessary between them
