Use BH package, and eliminate boost::filesystem dependency
Basically, replace `boost::filesystem::path` operations with some
path-related regular expressions and string operations.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,9 +7,8 @@ Depends: R (>= 3.3)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-LinkingTo: Rcpp
-Imports: Rcpp (>= 0.12)
-VignetteBuilder: knitr
+LinkingTo: Rcpp, BH
+Imports: Rcpp (>= 0.12), BH (>= 1.65)
 RoxygenNote: 6.0.1
 Suggests:
     testthat,
