Add introduction to Hector vignette
Includes a basic Hector run and a parameter sensitivity analysis.

Note that this introduces `knitr` as a "Suggests" dependency for
building vignettes.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,8 @@ Encoding: UTF-8
 LazyData: true
 LinkingTo: Rcpp
 Imports: Rcpp (>= 0.12)
+Suggests: knitr, ggplot2
+VignetteBuilder: knitr
 RoxygenNote: 6.0.1
 Suggests: testthat
 SystemRequirements: Boost C++ libraries
