First pass at funs for reading/writing INI files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,7 @@ export(fetchvars)
 export(getdate)
 export(isactive)
 export(newcore)
+export(read_ini)
 export(reset)
 export(run)
 export(runscenario)
@@ -143,5 +144,6 @@ export(sendmessage)
 export(setvar)
 export(shutdown)
 export(startdate)
+export(write_ini)
 importFrom(Rcpp,sourceCpp)
 useDynLib(hector)
