Add lookup table for units of settable variables.
There's an argument that looking these up by hand helps prevent
errors, but having to do so is just tedious.

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -11,7 +11,6 @@
 ^appveyor.yml$
 ^.github$
 ^wiki/
-
 ## Files supporting stand-alone hector.
 ^Makefile$
 ^project_files$
@@ -27,3 +26,4 @@
 ^src/makefile.standalone$
 ^src/testing$
 ^misc$
+^data-raw$
