--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,6 +134,7 @@ export(Y2000_SO2)
 export(enddate)
 export(fetchvars)
 export(getdate)
+export(getunits)
 export(isactive)
 export(newcore)
 export(reset)
