Add `hectortools` package to `Suggests`
So that we can use it in tests.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,10 @@ Suggests:
     nleqslv,
     knitr,
     rmarkdown,
-    ggplot2
+    ggplot2,
+    hectortools
+Remotes:
+    jgcri/hectortools
 SystemRequirements: Boost C++ libraries
 Collate:
     'aadoc.R'
