--- a/inst/input/hector_rcp60_constrained.ini
+++ b/inst/input/hector_rcp60_constrained.ini
@@ -1,7 +1,7 @@
 ; Config file for hector model: RCP6
 ;------------------------------------------------------------------------
 [core]
-run_name=rcp60
+run_name=rcp60_co2constrain
 startDate=1745
 endDate=2300
 do_spinup=1			; if 1, spin up model before running (default=1)
