update ini file documentation

--- a/inst/input/hector_rcp26_histconstrain.ini
+++ b/inst/input/hector_rcp26_histconstrain.ini
@@ -1,4 +1,6 @@
-; Config file for hector model: RCP26
+;Config file for hector model: that uses historical CO2 concentrations before 
+; switching to RCP26 concentrations to drive Hector. 
+; Emission driven Hector runs capture the carbon cycle whereas concentration runs do not.
 ;------------------------------------------------------------------------
 [core]
 run_name=rcp26_histco2constrain
