--- a/inst/input/hector_rcp60_constrained.ini
+++ b/inst/input/hector_rcp60_constrained.ini
@@ -1,4 +1,5 @@
-; Config file for hector model: RCP6
+; Config file for hector model: that uses RCP60 concentrations to drive Hector. 
+; Emission driven Hector runs capture the carbon cycle whereas concentration runs do not.
 ;------------------------------------------------------------------------
 [core]
 run_name=rcp60_co2constrain
