--- a/inst/input/hector_rcp45_constrained.ini
+++ b/inst/input/hector_rcp45_constrained.ini
@@ -1,4 +1,5 @@
-; Config file for hector model: RCP45
+; Config file for hector model: that uses RCP45 concentrations to drive Hector. 
+; Emission driven Hector runs capture the carbon cycle whereas concentration runs do not.
 ;------------------------------------------------------------------------
 [core]
 run_name=rcp45_co2constrain
