--- a/inst/input/hector_rcp85_constrained.ini
+++ b/inst/input/hector_rcp85_constrained.ini
@@ -1,4 +1,5 @@
-; Config file for hector model: RCP85
+; Config file for hector model: that uses RCP85 concentrations to drive Hector. 
+; Emission driven Hector runs capture the carbon cycle whereas concentration runs do not.
 ;------------------------------------------------------------------------
 [core]
 run_name=rcp85_co2constrain
