Support volcanic scale factor in R interface.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -129,6 +129,7 @@ export(TID)
 export(TT)
 export(TU)
 export(TWI)
+export(VOLCANIC_SCALE)
 export(VOLCANIC_SO2)
 export(Y2000_SO2)
 export(enddate)
