Update R package metadata.
* Sync R package version number to hector version number.
* Add citation information.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,14 @@
 Package: hector
-Title: Run the Hector Simple Climate Model
-Version: 0.4.0
-Authors@R: person("Robert", "Link", email = "robert.link@pnnl.gov", role = c("aut", "cre"))
-Description: Provides R bindings for the Hector Simple Climate Model.
+Title: The Hector Simple Climate Model
+Version: 2.2.0
+Authors@R: c(person("Robert", "Link", email = "robert.link@pnnl.gov", role = c("aut", "cre")),
+	     person("Corinne", "Hartin", email = "corinne.hartin@pnnl.gov", role = "aut"),
+	     person("Ben", "Bond-Lamberty", email = "BondLamberty@pnnl.gov", role = "aut"),
+	     person("Pralit", "Patel", email = "pralit.patel@pnnl.gov", role = "aut"))
+Description: Provides an R interface for the Hector Simple Climate
+    Model.  Using this interface you can set up and initialize the model,
+    change model parameters and emissions inputs, run Hector, and
+    retrieve hector outputs.
 Depends: R (>= 3.3)
 License: GPL-3
 Encoding: UTF-8
