Add ability to get/set C partitioning params

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,11 @@ export(EMISSIONS_SO2)
 export(FFI_EMISSIONS)
 export(FLUX_INTERIOR)
 export(FLUX_MIXED)
+export(F_LITTERD)
+export(F_LUCD)
+export(F_LUCV)
+export(F_NPPD)
+export(F_NPPV)
 export(GETDATA)
 export(GLOBAL_TEMP)
 export(GLOBAL_TEMPEQ)
