Set/retrieve biome-specific parameters via R API

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(ATM_OCEAN_FLUX_LL)
 export(BETA)
 export(CO3_HL)
 export(CO3_LL)
+export(DETRITUSC)
 export(DIC_HL)
 export(DIC_LL)
 export(DIFFUSIVITY)
@@ -73,6 +74,7 @@ export(LL_WARNING)
 export(LUC_EMISSIONS)
 export(NATURAL_CH4)
 export(NATURAL_SO2)
+export(NPP_FLUX0)
 export(OCEAN_C)
 export(OCEAN_CFLUX)
 export(OCEAN_C_DO)
@@ -128,14 +130,17 @@ export(RF_TOTAL)
 export(RF_T_ALBEDO)
 export(RF_VOL)
 export(SETDATA)
+export(SOILC)
 export(TEMP_HL)
 export(TEMP_LL)
 export(TID)
 export(TT)
 export(TU)
 export(TWI)
+export(VEGC)
 export(VOLCANIC_SCALE)
 export(VOLCANIC_SO2)
+export(WARMINGFACTOR)
 export(Y2000_SO2)
 export(enddate)
 export(fetchvars)
