--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,10 +20,7 @@ Suggests:
     nleqslv,
     knitr,
     rmarkdown,
-    ggplot2,
-    hectortools
-Remotes:
-    jgcri/hectortools
+    ggplot2
 SystemRequirements: Boost C++ libraries
 Collate:
     'aadoc.R'
