--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(ATMOSPHERIC_O3)
 export(ATM_OCEAN_FLUX_HL)
 export(ATM_OCEAN_FLUX_LL)
 export(BETA)
+export(CA_CONSTRAIN)
 export(CO3_HL)
 export(CO3_LL)
 export(DETRITUS_C)
