--- a/inst/_pkgdown.yml
+++ b/inst/_pkgdown.yml
@@ -1,27 +1,42 @@
 navbar:
-  structure:
-    left:
-      - home
-      - manual
-      - vignettes
-      - reference
-      - news
-    right: github
-  components:
-    home:
-      icon: fa-home fa-lg
-      href: index.html
-    reference:
-      text: Reference
-      href: reference/index.html
-    manual:
-      text: Manual
-      href: articles/manual/index.html
-    vignettes:
-      text: Vignettes
+  type: default
+  left:
+    - icon: fa-home fa-lg
+      href: "index.html"
+    - text: Manual
+      href: "articles/manual/index.html"
+    - text: Vignettes
       menu:
         - text: "A tour of the Hector R interface"
           href: articles/intro-to-hector.html
         - text: "Example: Using Hector to solve for an emissions pathway"
           href: articles/hector_apply.html
-    articles: ~
+    - text: Reference
+      href: "reference/index.html"
+  right:
+    - icon: fa-github fa-lg
+      href: "https://github.com/JGCRI/hector"
+
+reference:
+  - title: Running Hector
+    contents:
+      - newcore
+      - methods
+      - run
+      - reset
+      - shutdown
+      - runscenario
+  - title: Setting and retrieving data
+    contents:
+      - fetchvars
+      - setvar
+      - sendmessage
+      - isactive
+      - getdate
+      - startdate
+      - enddate
+      - getname
+      - getunits
+  - title: Variable and component identifiers
+    contents:
+      - matches("[_A-Z]+")
