--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ matrix:
       addons: 
         apt: 
           packages: 
-            - libboost-system1.58-dev
-            - libboost-filesystem1.58-dev
+            - libboost-system-dev
+            - libboost-filesystem-dev
 
       # BOOSTROOT is set to look for header files in the default place
       #where Ubuntu apt will install them --
@@ -41,8 +41,8 @@ matrix:
       addons: 
         apt: 
           packages: 
-            - libboost-system1.58-dev
-            - libboost-filesystem1.58-dev
+            - libboost-system-dev
+            - libboost-filesystem-dev
 
       before_script: 
         - "export BOOSTROOT=/usr/include/x86_64-linux-gnu/"
