--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,10 +22,7 @@ Suggests:
     rmarkdown,
     ggplot2,
     tidyr (>= 0.7),
-    dplyr (>= 0.7),
-    hectortools
-Remotes:
-    jgcri/hectortools
+    dplyr (>= 0.7)
 SystemRequirements: Boost C++ libraries
 Collate:
     'aadoc.R'
