Set biome-specific vars; retrieve biome list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -142,6 +142,7 @@ export(VOLCANIC_SO2)
 export(Y2000_SO2)
 export(enddate)
 export(fetchvars)
+export(get_biome_list)
 export(getdate)
 export(getname)
 export(getunits)
