--- a/NAMESPACE
+++ b/NAMESPACE
@@ -155,5 +155,6 @@ export(sendmessage)
 export(setvar)
 export(shutdown)
 export(startdate)
+export(use_biomes)
 importFrom(Rcpp,sourceCpp)
 useDynLib(hector)
