--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(ATM_OCEAN_FLUX_LL)
 export(BETA)
 export(CO3_HL)
 export(CO3_LL)
+export(DETRITUS_C)
 export(DIC_HL)
 export(DIC_LL)
 export(DIFFUSIVITY)
@@ -74,6 +75,7 @@ export(LL_WARNING)
 export(LUC_EMISSIONS)
 export(NATURAL_CH4)
 export(NATURAL_SO2)
+export(NPP_FLUX0)
 export(OCEAN_AIR_TEMP)
 export(OCEAN_C)
 export(OCEAN_CFLUX)
@@ -131,14 +133,17 @@ export(RF_TOTAL)
 export(RF_T_ALBEDO)
 export(RF_VOL)
 export(SETDATA)
+export(SOIL_C)
 export(TEMP_HL)
 export(TEMP_LL)
 export(TID)
 export(TT)
 export(TU)
 export(TWI)
+export(VEG_C)
 export(VOLCANIC_SCALE)
 export(VOLCANIC_SO2)
+export(WARMINGFACTOR)
 export(Y2000_SO2)
 export(enddate)
 export(fetchvars)
