--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,7 @@ export(VOLCANIC_SCALE)
 export(VOLCANIC_SO2)
 export(WARMINGFACTOR)
 export(Y2000_SO2)
+export(create_biome)
 export(enddate)
 export(fetchvars)
 export(get_biome_list)
