Add merge_biomes function. Improve function docs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -153,6 +153,7 @@ export(getdate)
 export(getname)
 export(getunits)
 export(isactive)
+export(merge_biomes)
 export(newcore)
 export(reset)
 export(run)
@@ -160,6 +161,7 @@ export(runscenario)
 export(sendmessage)
 export(setvar)
 export(shutdown)
+export(split_biome)
 export(startdate)
 importFrom(Rcpp,sourceCpp)
 useDynLib(hector)
