Clean up based on R CMD CHECK

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -155,6 +155,7 @@ export(getunits)
 export(isactive)
 export(merge_biomes)
 export(newcore)
+export(rename_biome)
 export(reset)
 export(run)
 export(runscenario)
