--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(LL_WARNING)
 export(LUC_EMISSIONS)
 export(NATURAL_CH4)
 export(NATURAL_SO2)
+export(NPP)
 export(OCEAN_AIR_TEMP)
 export(OCEAN_C)
 export(OCEAN_CFLUX)
