Replace Ca_constrain with CO2_constrain
To better reflect that this is CO2 concentration, NOT the atmospheric C
pool (which the variable Ca) refers to.

See discussion here:
https://github.com/JGCRI/hector/pull/342#discussion_r368054666

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(ATMOSPHERIC_O3)
 export(ATM_OCEAN_FLUX_HL)
 export(ATM_OCEAN_FLUX_LL)
 export(BETA)
-export(CA_CONSTRAIN)
+export(CO2_CONSTRAIN)
 export(CO3_HL)
 export(CO3_LL)
 export(DETRITUS_C)
