--- a/inst/input/api-example.ini
+++ b/inst/input/api-example.ini
@@ -64,8 +64,8 @@ luc_emissions=csv:emissions/gcam_emissions.csv
 ; Any residual between model [CO2] and model [CO2] will be put into luc_emissions
 ; If we've also supplied luc_emissions, then the residual will be eliminated by
 ; scaling the natural atmosphere fluxes (NPP, RH, ocean, etc).
-;Ca_constrain=csv:constraints/lawdome_co2.csv		; Law Dome CO2 record
-;Ca_constrain=csv:constraints/rcp45_co2ppm.csv
+;CO2_constrain=csv:constraints/lawdome_co2.csv		; Law Dome CO2 record
+;CO2_constrain=csv:constraints/rcp45_co2ppm.csv
 
 ; Initial (preindustrial) carbon fluxes
 ;boreal.npp_flux0=5.0
