--- a/inst/input/hector_rcp45_constrained.ini
+++ b/inst/input/hector_rcp45_constrained.ini
@@ -69,8 +69,8 @@ luc_emissions=csv:emissions/RCP45_emissions.csv
 ; Optional atmospheric CO2 constraint, ppmv
 ; If supplied, the model will use these data, ignoring what it calculates
 ; Any residual between model [CO2] and model [CO2] will be put into the deep ocean
-;Ca_constrain=csv:constraints/lawdome_co2.csv		; Law Dome CO2 record
-Ca_constrain=csv:constraints/rcp45_co2ppm.csv	; MAGICC output
+;CO2_constrain=csv:constraints/lawdome_co2.csv		; Law Dome CO2 record
+CO2_constrain=csv:constraints/rcp45_co2ppm.csv	; MAGICC output
 
 ; CO2 and temperature effects on the carbon cycle
 ; these are global values, can optionally specify biome-specific ones as above
