Replace 'HCF' with 'HCFC'

--- a/inst/input/hector-gcam.ini
+++ b/inst/input/hector-gcam.ini
@@ -287,22 +287,22 @@ rho= 0.00033
 halon2402_emissions= csv:../input/climate/RCP45_emissions.csv
 molarMass=259.8
 
-[HCF22_halocarbon]
+[HCFC22_halocarbon]
 tau= 12.0
 rho= 0.0002
-HCF22_emissions= csv:../input/climate/RCP45_emissions.csv
+HCFC22_emissions= csv:../input/climate/RCP45_emissions.csv
 molarMass=86.45
 
-[HCF141b_halocarbon]
+[HCFC141b_halocarbon]
 tau= 9.3
 rho= 0.00014
-HCF141b_emissions= csv:../input/climate/RCP45_emissions.csv
+HCFC141b_emissions= csv:../input/climate/RCP45_emissions.csv
 molarMass=116.9
 
-[HCF142b_halocarbon]
+[HCFC142b_halocarbon]
 tau= 17.9
 rho= 0.0002
-HCF142b_emissions= csv:../input/climate/RCP45_emissions.csv
+HCFC142b_emissions= csv:../input/climate/RCP45_emissions.csv
 molarMass=100.45
 
 [CH3Cl_halocarbon]
