--- a/inst/input/hector_rcp60_constrained.ini
+++ b/inst/input/hector_rcp60_constrained.ini
@@ -340,26 +340,26 @@ molarMass=259.8
 ;nj=2
 ;FC=1.22
 
-[HCF22_halocarbon]
+[HCFC22_halocarbon]
 tau=12.0
 rho=0.0002
-HCF22_emissions=csv:emissions/RCP6_emissions.csv
+HCFC22_emissions=csv:emissions/RCP6_emissions.csv
 molarMass=86.45
 ;ni=1
 ;FC=0.35
 
-[HCF141b_halocarbon]
+[HCFC141b_halocarbon]
 tau=9.3
 rho=0.00014
-HCF141b_emissions=csv:emissions/RCP6_emissions.csv
+HCFC141b_emissions=csv:emissions/RCP6_emissions.csv
 molarMass=116.9
 ;ni=2
 ;FC=0.72
 
-[HCF142b_halocarbon]
+[HCFC142b_halocarbon]
 tau=17.9
 rho=0.0002
-HCF142b_emissions=csv:emissions/RCP6_emissions.csv
+HCFC142b_emissions=csv:emissions/RCP6_emissions.csv
 molarMass=100.45
 ;ni=1
 ;FC=0.36
