Update H2o & O3 forcing vars
* Update names of H2o & O3 forcing vars in rcpp export & test file(s)
* Clean & re-build Hector with updated trop O3 & Strat H2O vars

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,6 +109,7 @@ export(RF_CH3CCL3)
 export(RF_CH3CL)
 export(RF_CH4)
 export(RF_CO2)
+export(RF_H2O_STRAT)
 export(RF_HALON1211)
 export(RF_HALON1301)
 export(RF_HALON2402)
@@ -124,15 +125,14 @@ export(RF_HFC245FA)
 export(RF_HFC32)
 export(RF_HFC4310)
 export(RF_N2O)
+export(RF_O3_TROP)
 export(RF_OC)
 export(RF_SF6)
 export(RF_SO2)
 export(RF_SO2D)
 export(RF_SO2I)
-export(RF_StratH2O)
 export(RF_TOTAL)
 export(RF_T_ALBEDO)
-export(RF_TropO3)
 export(RF_VOL)
 export(SETDATA)
 export(SOIL_C)
