Extent "HCF" --> "HCFC" renaming into cpp back-end

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,9 +35,9 @@ export(EMISSIONS_CO)
 export(EMISSIONS_HALON1211)
 export(EMISSIONS_HALON1301)
 export(EMISSIONS_HALON2402)
-export(EMISSIONS_HCF141B)
-export(EMISSIONS_HCF142B)
-export(EMISSIONS_HCF22)
+export(EMISSIONS_HCFC141B)
+export(EMISSIONS_HCFC142B)
+export(EMISSIONS_HCFC22)
 export(EMISSIONS_HFC125)
 export(EMISSIONS_HFC134A)
 export(EMISSIONS_HFC143A)
@@ -113,9 +113,9 @@ export(RF_H2O)
 export(RF_HALON1211)
 export(RF_HALON1301)
 export(RF_HALON2402)
-export(RF_HCF141B)
-export(RF_HCF142B)
-export(RF_HCF22)
+export(RF_HCFC141B)
+export(RF_HCFC142B)
+export(RF_HCFC22)
 export(RF_HFC125)
 export(RF_HFC134A)
 export(RF_HFC143A)
