--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,6 @@ export(ATMOSPHERIC_O3)
 export(ATM_OCEAN_FLUX_HL)
 export(ATM_OCEAN_FLUX_LL)
 export(BETA)
-export(CO2_CONSTRAIN)
 export(C2F6_CONSTRAIN)
 export(CCL4_CONSTRAIN)
 export(CF4_CONSTRAIN)
@@ -24,6 +23,7 @@ export(CH3BR_CONSTRAIN)
 export(CH3CCL3_CONSTRAIN)
 export(CH3CL_CONSTRAIN)
 export(CH4_CONSTRAIN)
+export(CO2_CONSTRAIN)
 export(CO3_HL)
 export(CO3_LL)
 export(DETRITUS_C)
@@ -79,9 +79,9 @@ export(GLOBAL_TEMPEQ)
 export(HALON1211_CONSTRAIN)
 export(HALON1301_CONSTRAIN)
 export(HALON2402_CONSTRAIN)
-export(HCF141B_CONSTRAIN)
-export(HCF142B_CONSTRAIN)
-export(HCF22_CONSTRAIN)
+export(HCFC141B_CONSTRAIN)
+export(HCFC142B_CONSTRAIN)
+export(HCFC22_CONSTRAIN)
 export(HEAT_FLUX)
 export(HFC125_CONSTRAIN)
 export(HFC134A_CONSTRAIN)
