Rename "HCF" to "HCFC" in .ini and emission files (#350)
* Add fetchvars_all and helper funcs

* Add fetchvars_all
	* Fetches all available Hector variables
* Add cum_vars_input
	* Cumulates all input variables
	* Helper func for fetchvars_all
* Add cum_vars_params
	* Cumulates all available parameters passed
  	  into Hector
	* Helper func for fetchvars_all
* Add cum_vars_output
	* Cumulates all available output variables
	* Helper func for fetchvars_all

* Refactor fetchvars_all()

* Refactor fatchvars_all() and helper functions
* Fix hector core component capability registration bugs

* Whitespace reformatting c/o RStudio

* Add documentation to fetchvars_all & helper funcs

* Add output writing capability to fetchvars_all

* Fix bug in writing year subset to csv

* Update .gitignore

* Ignore hidden visual studio files

* Documentation tweaks

* Include results from fetchvars_all clean & rebuild

* Revert "Whitespace reformatting c/o RStudio"

This reverts commit 30e854a9f7c10daaed720979e593c27991afd560.

* Update mans

* fetchvars_all helper docs

* Revert old fetchvars_all changes

* Revert unmerged variable timeseries

* Remove non-existent function export

* Replace 'HCF' with 'HCFC'

* Replace 'HCF' with 'HCFC'

* Rename 'HCF' as 'HCFC'

* Update docs

* Remove vs section

* Extent "HCF" --> "HCFC" renaming into cpp back-end

* Add missing newline

* Update sysdata

* Resolve conflicts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,6 @@ export(ATMOSPHERIC_O3)
 export(ATM_OCEAN_FLUX_HL)
 export(ATM_OCEAN_FLUX_LL)
 export(BETA)
-export(CO2_CONSTRAIN)
 export(C2F6_CONSTRAIN)
 export(CCL4_CONSTRAIN)
 export(CF4_CONSTRAIN)
@@ -24,6 +23,7 @@ export(CH3BR_CONSTRAIN)
 export(CH3CCL3_CONSTRAIN)
 export(CH3CL_CONSTRAIN)
 export(CH4_CONSTRAIN)
+export(CO2_CONSTRAIN)
 export(CO3_HL)
 export(CO3_LL)
 export(DETRITUS_C)
@@ -48,9 +48,9 @@ export(EMISSIONS_CO)
 export(EMISSIONS_HALON1211)
 export(EMISSIONS_HALON1301)
 export(EMISSIONS_HALON2402)
-export(EMISSIONS_HCF141B)
-export(EMISSIONS_HCF142B)
-export(EMISSIONS_HCF22)
+export(EMISSIONS_HCFC141B)
+export(EMISSIONS_HCFC142B)
+export(EMISSIONS_HCFC22)
 export(EMISSIONS_HFC125)
 export(EMISSIONS_HFC134A)
 export(EMISSIONS_HFC143A)
@@ -79,9 +79,9 @@ export(GLOBAL_TEMPEQ)
 export(HALON1211_CONSTRAIN)
 export(HALON1301_CONSTRAIN)
 export(HALON2402_CONSTRAIN)
-export(HCF141B_CONSTRAIN)
-export(HCF142B_CONSTRAIN)
-export(HCF22_CONSTRAIN)
+export(HCFC141B_CONSTRAIN)
+export(HCFC142B_CONSTRAIN)
+export(HCFC22_CONSTRAIN)
 export(HEAT_FLUX)
 export(HFC125_CONSTRAIN)
 export(HFC134A_CONSTRAIN)
@@ -142,9 +142,9 @@ export(RF_H2O_STRAT)
 export(RF_HALON1211)
 export(RF_HALON1301)
 export(RF_HALON2402)
-export(RF_HCF141B)
-export(RF_HCF142B)
-export(RF_HCF22)
+export(RF_HCFC141B)
+export(RF_HCFC142B)
+export(RF_HCFC22)
 export(RF_HFC125)
 export(RF_HFC134A)
 export(RF_HFC143A)
