--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ export(NATURAL_CH4)
 export(NATURAL_SO2)
 export(NAT_EMISSIONS_N2O)
 export(NBP)
+export(NBP_CONSTRAIN)
 export(NPP)
 export(NPP_FLUX0)
 export(OCEAN_AIR_TEMP)
