added in input variable lo_warming_ratio in ini file for land-ocean warming ratio. Value gets set to value of bk in DOECLIM for calculations

--- a/project_files/Xcode/hector.xcodeproj/xcshareddata/xcschemes/hector.xcscheme
+++ b/project_files/Xcode/hector.xcodeproj/xcshareddata/xcschemes/hector.xcscheme
@@ -54,7 +54,19 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "input/hector_rcp45.ini"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "input/hector_rcp26.ini"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "input/hector_rcp85.ini"
             isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "input/hector_rcp60.ini"
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
