exposed ratio in R and wrote test for land-ocean warming ratio

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ export(LL_DEBUG)
 export(LL_NOTICE)
 export(LL_SEVERE)
 export(LL_WARNING)
+export(LO_WARMING_RATIO)
 export(LUC_EMISSIONS)
 export(N2O_CONSTRAIN)
 export(NATURAL_CH4)
