finished comments and added to documentation within the terrestrial carbon page and the constraints page

--- a/inst/input/hector-gcam.ini
+++ b/inst/input/hector-gcam.ini
@@ -140,7 +140,7 @@ S=3.0 				; equilibrium climate sensitivity for 2xCO2, degC
 diff=2.3			; ocean heat diffusivity, cm2/s
 alpha=1.0     ; scaling factor for aerosol forcing
 volscl=1.0    ; scaling factor for volcanic forcing
-
+;lo_warming_ratio=1.591   ; Optional land-ocean warming ratio (add if you want land and ocean air temperatures overwritten to track ESM) - added by Skylar Gering-2020 
 
 ; Optional global temperature constraint
 ; If supplied, the model will use these data, ignoring what it calculates
