--- a/.github/workflows/test-command-line_hector.yml
+++ b/.github/workflows/test-command-line_hector.yml
@@ -5,9 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    # install dependencies
-    - name: boost
-      run: sudo apt-get update && sudo apt-get install -yq libboost1.65-dev
-      run: make hector
-
-
+        - name: Compile
+      		run: |
+        	sudo apt install libboost-filesystem-dev libboost-system-dev
+		make hector
