--- a/.github/workflows/test-command-line_hector.yml
+++ b/.github/workflows/test-command-line_hector.yml
@@ -1,9 +1,5 @@
 name: test command line hector
 on: [push]
-jobs:
-  build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2
-        - name: Build Hector
-      		run: sudo apt install libboost-filesystem-dev libboost-system-dev
+      - run: brew install boost 
