--- a/.github/workflows/test-command-line_hector.yml
+++ b/.github/workflows/test-command-line_hector.yml
@@ -1,5 +1,9 @@
-name: test command line hector
-on: push
-    runs-on: macos-latest
+name: test command line hector 
+on: [push]
+jobs:
+  build_hector:
+    runs-on: macos-10.15
     steps:
-      - run: brew install boost 
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+      - run: brew install boost
