--- a/.github/workflows/test-command-line_hector.yml
+++ b/.github/workflows/test-command-line_hector.yml
@@ -7,3 +7,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: brew install boost
+      - run: ls /usr/local/Cellar
