Manually entering the boost version

--- a/.github/workflows/test-command-line_hector.yml
+++ b/.github/workflows/test-command-line_hector.yml
@@ -14,9 +14,7 @@ jobs:
       - run: ls $BOOSTROOT
       - run: make hector
         env:
-          BOOST: /usr/local/Cellar/boost/
-          BOOSTVERSION: `ls $BOOST`
-          BOOSTROOT: `$BOOST/$BOOSTVERSION/include`
-          BOOSTLIB: `$BOOST/$BOOSTVERSION/lib`
+          BOOSTROOT: /usr/local/Cellar/boost/1.74.0/include
+          BOOSTLIB: /usr/local/Cellar/boost/1.74.0/lib
           
           
