--- a/.github/workflows/test-command-line_hector.yml
+++ b/.github/workflows/test-command-line_hector.yml
@@ -7,10 +7,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: brew install boost
+      - run: BOOSTROOT=/usr/local/Cellar/boost/1.74.0/include
+      - run: BOOSTLIB=/usr/local/Cellar/boost/1.74.0/lib
       - run: make hector
       - run: sh ./test_hector.sh ./src/hector
-        env:
-          BOOSTROOT: /usr/local/Cellar/boost/1.74.0/include
-          BOOSTLIB: /usr/local/Cellar/boost/1.74.0/lib
           
           
