--- a/.github/workflows/command-line.yaml
+++ b/.github/workflows/command-line.yaml
@@ -1,4 +1,5 @@
-# This is a basic workflow to help you get started with Actions
+# This is a basic workflow to help you get started with Actions 
+# based on https://github.com/JGCRI/hector/new/master?filename=.github%2Fworkflows%2Fmain.yml&workflow_template=blank
 
 name: Command Line Hector
 
@@ -15,8 +16,7 @@ on:
 jobs:
   # This workflow contains two jobs, one that builds hector on ubuntu and the second 
   # builds and tests Hector on macos. The purpose of this work for is to make sure that Hector 
-  # can be built from the command line. Persumably if it fails a test on one platform it will 
-  # fail on the other platform. 
+  # can be built from the command line. 
   ubuntu:
     runs-on: ubuntu-latest
 
@@ -34,6 +34,9 @@ jobs:
           # Build the Hector executable 
           BOOSTLIB=/usr/local/lib   BOOSTVERSION=$ver   BOOSTROOT=/usr/include/boost make hector
           
+	  # Run the Hector test script
+          bash ./test_hector.sh ./src/hector
+
   macos:
     runs-on: macos-latest
 
