--- a/.github/workflows/command-line.yaml
+++ b/.github/workflows/command-line.yaml
@@ -30,6 +30,8 @@ jobs:
           
           ver=`awk '/define.*BOOST_LIB_VERSION/ {print $3}' /usr/include/boost/version.hpp`
           echo Boost version $ver
+          BOOSTLIB=/usr/local/lib BOOSTVERSION=$ver BOOSTROOT=/usr/include/boost make hector
+          ./src/hector ./inst/input/hector_rcp45.ini
           
   macos:
     runs-on: macos-latest
